[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/ShootingEnemy.gd" type="Script" id=1]
[ext_resource path="res://Objects/Enemies/images/ini2.png" type="Texture" id=2]
[ext_resource path="res://Objects/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/FX/Gunshot.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/FX/Action Misc 17.wav" type="AudioStream" id=5]
[ext_resource path="res://Objects/Explode.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 310.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 4 )

[node name="ShootingEnemy" type="AnimatedSprite"]
frames = SubResource( 4 )
script = ExtResource( 1 )
Bullet = ExtResource( 3 )
Explode = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 2

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -2.86102e-06, 2.86102e-06 )
scale = Vector2( 3.25, 3.25 )
process_parent = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 13, -2 )

[node name="DamageArea" type="Area2D" parent="." groups=["DashTarget"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 5 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 1.3

[node name="TakeDMG" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.5

[connection signal="animation_finished" from="." to="." method="_on_ShootingEnemy_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
